[package]
name = "skybox_composer"
description = "Skybox Composer cli tool"
authors = ["Dmytro Onypko <vaporif@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/d3-dmitriy-onypko/skybox-builder-rs"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testable=[]

[dependencies]
image = { version = "0.24.3", default-features = false, features = ["png"] }
rayon = "1.5.3"

[dev-dependencies]
similar-asserts = "1.4.2"
