[package]
name = "skybox_composer"
description = "Skybox Composer cli tool"
authors = ["Dmytro Onypko <vaporif@gmail.com>"]
version = "0.2.2"
edition = "2021"
repository = "https://github.com/d3-dmitriy-onypko/skybox-builder-rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testable=[]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["cargo"] }
image = { version = "0.25.0", default-features = false, features = ["png"] }
rayon = "1.7.0"

[dev-dependencies]
similar-asserts = "1.5.*"
rusty-hook = "0.11.*"
